--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <title>Lucky Café</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
-    
+    <header>
+        <div class="row">
+            <nav>
+
+            </nav>
+        </div>
+        <div class="row">
+            <div class="slider">
+
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
