--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <header>
         <div class="row">
             <nav>
-
+                
             </nav>
         </div>
         <div class="row">
             <div class="slider">
-
+                <div class="filter">
+                    <h1 class="text-center">Lucky - Mi kis kávézónk</h1>
+                </div>
             </div>
         </div>
     </header>
