--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="slider">
                 <div class="filter">
-                    <h1 class="text-center">Lucky - Mi kis kávézónk</h1>
+                    <h1 class="text-center">Lucky <img src="images/coffee-icon.png" width="90" alt="Kávé ikon" title="Kávé ikon"> Mi kis kávézónk</h1>
                 </div>
             </div>
         </div>
