--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </nav>
         </div>
         <div class="row">
-            <div class="slider">
+            <div class="slider p-0">
                 <div class="filter">
                     <h1 class="text-center">Lucky <img src="images/coffee-icon.png" width="90" alt="Kávé ikon" title="Kávé ikon"> Mi kis kávézónk</h1>
                 </div>
