--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <div class="slider p-0">
                 <div class="filter">
                     <h1 class="text-center">Lucky <img src="images/coffee-icon.png" width="90" alt="Kávé ikon" title="Kávé ikon"> Mi kis kávézónk</h1>
+                    <div class="order-b text-center">
+                        <button type="button" class="btn btn-warning upper">Rendelj Most</button>
+                    </div>
                 </div>
             </div>
         </div>
