--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
 </head>
 <body>
     <header>
-        <div class="row">
-            <nav>
-                
-            </nav>
+        <div class="navBar">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p><img height="60" src="images/logo.png" alt="Logo" title="Logo"></p>
+                    </div>
+                    <div class="col-lg-6">
+                        <nav>
+                            <ul class="d-flex">
+                                <li><a href="index.html" class="active">Főoldal</a></li>
+                                <li><a href="kavefajtak.html">Kávéfajták</a></li>
+                                <li><a href="sutemenyek.html">Sütemények</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="slider p-0">
