--- a/sutemenyek.html
+++ b/sutemenyek.html
@@ -9,7 +9,26 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="navBar">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p><img height="60" src="images/logo.png" alt="Logo" title="Logo"></p>
+                    </div>
+                    <div class="col-lg-6">
+                        <nav>
+                            <ul class="d-flex">
+                                <li><a href="index.html" class="active">Főoldal</a></li>
+                                <li><a href="kavefajtak.html">Kávéfajták</a></li>
+                                <li><a href="sutemenyek.html">Sütemények</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <main>
         
     
