--- a/sutemenyek.html
+++ b/sutemenyek.html
@@ -19,9 +19,9 @@
                     <div class="col-lg-6">
                         <nav>
                             <ul class="d-flex">
-                                <li><a href="index.html" class="active">Főoldal</a></li>
+                                <li><a href="index.html">Főoldal</a></li>
                                 <li><a href="kavefajtak.html">Kávéfajták</a></li>
-                                <li><a href="sutemenyek.html">Sütemények</a></li>
+                                <li><a href="sutemenyek.html" class="active">Sütemények</a></li>
                             </ul>
                         </nav>
                     </div>
