ikon + footer eleje

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lucky Café</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/images/logo.ico">
 </head>
 <body>
     <header>
@@ -74,7 +74,15 @@
         </section>
     </main>
     <footer>
-
+        <div class="container">
+            <div class="row">
+                <ul>
+                    <li>Kapcsolat</li>
+                    <li>testemail@gmail.com</li>
+                    <li>+36 30 123 456 7890</li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
