--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lucky Café</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="/images/logo.ico">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
     <header>
@@ -69,18 +69,34 @@
         <section class="text-center map">
             <div class="container">
                 <h2>Elhelyezkedésünk</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2691.041810319922!2d18.39203025666388!3d47.58642882214234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476a40d924e64371%3A0xe6429137c6e95d38!2sFrei%20Cafe%20Tatab%C3%A1nya!5e0!3m2!1shu!2shu!4v1733693946965!5m2!1shu!2shu" width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1600.0716475388397!2d18.394375235994257!3d47.587455532094204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1shu!2shu!4v1733769600013!5m2!1shu!2shu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
     </main>
     <footer>
         <div class="container">
             <div class="row">
-                <ul>
-                    <li>Kapcsolat</li>
-                    <li>testemail@gmail.com</li>
-                    <li>+36 30 123 456 7890</li>
-                </ul>
+                <div class="d-flex lists">
+                    <ul>
+                        <li>Rólunk</li>
+                        <li><a href="index.html#about-us" title="Rólunk">Rólunk</a></li>
+                        <li><a href="kavefajtak.html" title="Kávéfajták">Kávéfajták</a></li>
+                        <li><a href="sutemenyek.html" title="Sütemények">Sütemények</a></li>
+                        <li><a href="" title="Blog">Blog</a></li>
+                    </ul>
+                    <ul>
+                        <li>Kapcsolat</li>
+                        <li>testemail@gmail.com</li>
+                        <li>+36 00 123 456 7890</li>
+                    </ul>
+                    <ul>
+                        <li>Kövess minket!</li>
+                        <li><a href="https://www.facebook.com/" target="_blank" title="Facebook"><i class="bi bi-facebook"></i></a> <a href="https://www.instagram.com/" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a> <a href="https://x.com/?lang=hu" target="_blank" title="X"><i class="bi bi-twitter-x"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row text-center">
+                <p>Copyright &copy; All rights reserved!</p>
             </div>
         </div>
     </footer>
