about us reszponzív

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lucky Café</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico?v=2">
 </head>
 <body>
