--- a/sutemenyek.html
+++ b/sutemenyek.html
@@ -6,6 +6,7 @@
     <title>Lucky Café</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
@@ -13,7 +14,7 @@
         <div class="navBar">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 logo">
                         <p><img height="60" src="images/logo.png" alt="Logo" title="Logo"></p>
                     </div>
                     <div class="col-lg-6">
