--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navBar">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 logo">
                         <p><img height="60" src="images/logo.png" alt="Logo" title="Logo"></p>
                     </div>
                     <div class="col-lg-6">
