--- a/sutemenyek.html
+++ b/sutemenyek.html
@@ -71,7 +71,58 @@
                     </div>
                 </div>
             </div>
-        </div>  
+        </div> 
+        <div class="container margto">
+            <div class="row g-4">
+                <div class="col-lg-4 ">
+                    <div class="card">
+                        <img src="images/tiramisu_k.png" class="card-img-top" alt="Csokoládétorta">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Csokoládétorta</h5>
+                            <p class="card-text">Gazdag csokoládéíz, amely minden édesszájú álmát valóra váltja.</p>
+                            <a href="#" class="btn btn-custom">Tovább</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 ">
+                    <div class="card">
+                        <img src="images/kavessuti_k.png" class="card-img-top" alt="Epres Szelet">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Epres Szelet</h5>
+                            <p class="card-text">Friss eperrétegek és könnyű piskóta tökéletes harmóniája.</p>
+                            <a href="#" class="btn btn-custom">Tovább</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 ">
+                    <div class="card">
+                        <img src="images/kavesmuffin_k.png" class="card-img-top" alt="Citromos Torta">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Citromos Torta</h5>
+                            <p class="card-text">Frissítő citromos ízvilág, amely tökéletes egy csésze kávé mellé.</p>
+                            <a href="#" class="btn btn-custom">Tovább</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="hatter-kave">
+            <div class="honap-kedvence" style="background-image: url('coffee-background.jpg');">
+                <div class="kedvenc-wrapper">
+                  <h2 class="kedvenc-title">Hónap kedvence</h2>
+                  <div class="kedvenc-card">
+                    <div class="kedvenc-image-container">
+                      <img src="images/kavescroissant_k.png" alt="Hónap kedvence sütemény" class="kedvenc-img">
+                    </div>
+                    <div class="kedvenc-content">
+                      <h3>Csokoládétorta</h3>
+                      <p>Gazdag csokoládéíz, amely minden édesszájú álmát valóra váltja.</p>
+                      <button class="kedvenc-button">Tovább</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>  
     </main>
     <footer>
         <div class="container">
