dobos torta kedvenc sutemeny befejezes

--- a/sutemenyek.html
+++ b/sutemenyek.html
@@ -106,13 +106,14 @@
                 </div>
             </div>
         </div>
-        <section class="hatter-kave">
-            <div class="honap-kedvence" style="background-image: url('coffee-background.jpg');">
+        <section class="hatter-kave ">
+            <div class="honap-kedvence filter margbo" style="background-image: url('coffee-background.jpg');">
                 <div class="kedvenc-wrapper">
-                  <h2 class="kedvenc-title">Hónap kedvence</h2>
-                  <div class="kedvenc-card">
+                  
+                  <div class="kedvenc-card ">
+                    <h2 class="kedvenc-title">Hónap kedvence</h2>
                     <div class="kedvenc-image-container">
-                      <img src="images/kavescroissant_k.png" alt="Hónap kedvence sütemény" class="kedvenc-img">
+                      <img src="images/dobos_torta.jpg" alt="Hónap kedvence sütemény" class="kedvenc-img">
                     </div>
                     <div class="kedvenc-content">
                       <h3>Csokoládétorta</h3>
@@ -124,7 +125,7 @@
               </div>
         </section>  
     </main>
-    <footer>
+    <footer class="margto2">
         <div class="container">
             <div class="row">
                 <div class="d-flex lists">
