--- a/kavefajtak.html
+++ b/kavefajtak.html
@@ -72,6 +72,40 @@
                 </div>
             </div>
         </div> 
+        <div class="container margto">
+            <div class="row g-4">
+                <div class="col-lg-4 ">
+                    <div class="card">
+                        <img src="images/latte.jpg" class="card-img-top" alt="Latte">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Latte</h5>
+                            <p class="card-text">Selymes tej és lágy espresso találkozása, ami a nyugalom ízét adja.</p>
+                            <a href="#" class="btn btn-custom">Tovább</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 ">
+                    <div class="card">
+                        <img src="images/flat_white.webp" class="card-img-top" alt="Flat White">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Flat White</h5>
+                            <p class="card-text">Finom textúrájú tej és erős kávé tökéletesen kiegyensúlyozott párosa.</p>
+                            <a href="#" class="btn btn-custom">Tovább</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 ">
+                    <div class="card">
+                        <img src="images/Ristretto.webp" class="card-img-top" alt="Ristretto">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Ristretto</h5>
+                            <p class="card-text">Rövid, de intenzív - kávé ízének esszenciája egyetlen kortyban.</p>
+                            <a href="#" class="btn btn-custom">Tovább</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <section class="hatter-kave ">
             <div class="honap-kedvence filter margbo" style="background-image: url('coffee-background.jpg');">
                 <div class="kedvenc-wrapper">
