--- a/kavefajtak.html
+++ b/kavefajtak.html
@@ -124,3 +124,33 @@
                 </div>
               </div>
         </section>  
+    </main>
+    <footer class="margto2">
+        <div class="container">
+            <div class="row">
+                <div class="d-flex lists">
+                    <ul>
+                        <li>Rólunk</li>
+                        <li><a href="index.html#about-us" title="Rólunk">Rólunk</a></li>
+                        <li><a href="kavefajtak.html" title="Kávéfajták">Kávéfajták</a></li>
+                        <li><a href="sutemenyek.html" title="Sütemények">Sütemények</a></li>
+                        <li><a href="" title="Blog">Blog</a></li>
+                    </ul>
+                    <ul>
+                        <li>Kapcsolat</li>
+                        <li>testemail@gmail.com</li>
+                        <li>+36 00 123 456 7890</li>
+                    </ul>
+                    <ul>
+                        <li>Kövess minket!</li>
+                        <li><a href="https://www.facebook.com/" target="_blank" title="Facebook"><i class="bi bi-facebook"></i></a> <a href="https://www.instagram.com/" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a> <a href="https://x.com/?lang=hu" target="_blank" title="X"><i class="bi bi-twitter-x"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row text-center">
+                <p>Copyright &copy; All rights reserved!</p>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
