sutemenyek oldal teljes befejezese

--- a/sutemenyek.html
+++ b/sutemenyek.html
@@ -44,8 +44,8 @@
                     <div class="card">
                         <img src="images/tiramisu_k.png" class="card-img-top" alt="Csokoládétorta">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Csokoládétorta</h5>
-                            <p class="card-text">Gazdag csokoládéíz, amely minden édesszájú álmát valóra váltja.</p>
+                            <h5 class="card-title">Tiramisu</h5>
+                            <p class="card-text">Klasszikus olasz desszert, lágy mascarponekrémmel és kávés piskótával.</p>
                             <a href="#" class="btn btn-custom">Tovább</a>
                         </div>
                     </div>
@@ -54,18 +54,18 @@
                     <div class="card">
                         <img src="images/kavessuti_k.png" class="card-img-top" alt="Epres Szelet">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Epres Szelet</h5>
-                            <p class="card-text">Friss eperrétegek és könnyű piskóta tökéletes harmóniája.</p>
+                            <h5 class="card-title">Macaron Kávéval</h5>
+                            <p class="card-text">Elegáns, roppanós macaronok kávés krémmel töltve.</p>
                             <a href="#" class="btn btn-custom">Tovább</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 ">
                     <div class="card">
-                        <img src="images/kavesmuffin_k.png" class="card-img-top" alt="Citromos Torta">
+                        <img src="images/dobos_torta.jpg" class="card-img-top" alt="Citromos Torta">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Citromos Torta</h5>
-                            <p class="card-text">Frissítő citromos ízvilág, amely tökéletes egy csésze kávé mellé.</p>
+                            <h5 class="card-title">Dobostorta</h5>
+                            <p class="card-text">Klasszikus magyar torta karamellizált cukorral és gazdag csokoládékrémmel.</p>
                             <a href="#" class="btn btn-custom">Tovább</a>
                         </div>
                     </div>
@@ -76,20 +76,20 @@
             <div class="row g-4">
                 <div class="col-lg-4 ">
                     <div class="card">
-                        <img src="images/tiramisu_k.png" class="card-img-top" alt="Csokoládétorta">
+                        <img src="images/kavesbrownie_k.png" class="card-img-top" alt="Csokoládétorta">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Csokoládétorta</h5>
-                            <p class="card-text">Gazdag csokoládéíz, amely minden édesszájú álmát valóra váltja.</p>
+                            <h5 class="card-title">Csokoládéöntetes Brownie</h5>
+                            <p class="card-text">Lágy és szaftos brownie csokoládéöntettel megkoronázva.</p>
                             <a href="#" class="btn btn-custom">Tovább</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 ">
                     <div class="card">
-                        <img src="images/kavessuti_k.png" class="card-img-top" alt="Epres Szelet">
+                        <img src="images/croissant.webp" class="card-img-top" alt="Epres Szelet">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Epres Szelet</h5>
-                            <p class="card-text">Friss eperrétegek és könnyű piskóta tökéletes harmóniája.</p>
+                            <h5 class="card-title">Csokoládéval Töltött Croissant</h5>
+                            <p class="card-text">Pillekönnyű tészta és krémes csokoládé tökéletes találkozása.</p>
                             <a href="#" class="btn btn-custom">Tovább</a>
                         </div>
                     </div>
@@ -98,8 +98,8 @@
                     <div class="card">
                         <img src="images/kavesmuffin_k.png" class="card-img-top" alt="Citromos Torta">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Citromos Torta</h5>
-                            <p class="card-text">Frissítő citromos ízvilág, amely tökéletes egy csésze kávé mellé.</p>
+                            <h5 class="card-title">Csokoládés Muffin</h5>
+                            <p class="card-text">Puha és omlós muffin gazdag csokoládédarabokkal megszórva.</p>
                             <a href="#" class="btn btn-custom">Tovább</a>
                         </div>
                     </div>
@@ -116,8 +116,8 @@
                       <img src="images/dobos_torta.jpg" alt="Hónap kedvence sütemény" class="kedvenc-img">
                     </div>
                     <div class="kedvenc-content">
-                      <h3>Csokoládétorta</h3>
-                      <p>Gazdag csokoládéíz, amely minden édesszájú álmát valóra váltja.</p>
+                      <h3>Dobostorta</h3>
+                      <p>Klasszikus magyar torta karamellizált cukorral és gazdag csokoládékrémmel – egy szelet történelem és édesség.</p>
                       <button class="kedvenc-button">Tovább</button>
                     </div>
                   </div>
