--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="slider p-0">
                 <div class="filter">
                     <div class="text-center slogen">Lucky <img src="images/coffee-icon.png" width="90" alt="Kávé ikon" title="Kávé ikon"> Mi kis kávézónk</div>
-                    <div class="order-b text-center">
+                    <div class="us-b text-center">
                         <a href="#about-us" class="btn btn-warning upper">Rólunk</a>
                     </div>
                 </div>
