--- a/kavefajtak.html
+++ b/kavefajtak.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico?v=2">
 </head>
 <body>
     <header>
@@ -21,8 +21,8 @@
                         <nav>
                             <ul class="d-flex">
                                 <li><a href="index.html">Főoldal</a></li>
-                                <li><a href="kavefajtak.html">Kávéfajták</a></li>
-                                <li><a href="sutemenyek.html" class="active">Sütemények</a></li>
+                                <li><a href="kavefajtak.html" class="active">Kávéfajták</a></li>
+                                <li><a href="sutemenyek.html">Sütemények</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -95,11 +95,11 @@
                     </div>
                 </div>
                 <div class="col-lg-4 ">
-                    <div class="card">
+                    <div class="card ristretto">
                         <img src="images/Ristretto.webp" class="card-img-top" alt="Ristretto">
                         <div class="card-body text-center">
                             <h5 class="card-title">Ristretto</h5>
-                            <p class="card-text">Rövid, de intenzív - kávé ízének esszenciája egyetlen kortyban.</p>
+                            <p class="card-text">Rövid, de intenzív - kávé ízének esszenciája egyetlen kortyban. Olasz különlegesség.</p>
                             <a href="#" class="btn btn-custom">Tovább</a>
                         </div>
                     </div>
