--- a/kavefajtak.html
+++ b/kavefajtak.html
@@ -99,7 +99,7 @@
                         <img src="images/Ristretto.webp" class="card-img-top" alt="Ristretto">
                         <div class="card-body text-center">
                             <h5 class="card-title">Ristretto</h5>
-                            <p class="card-text">Rövid, de intenzív - kávé ízének esszenciája egyetlen kortyban. Olasz különlegesség.</p>
+                            <p class="card-text">Rövid, de intenzív - kávé ízének esszenciája egyetlen olasz kortyban.</p>
                             <a href="#" class="btn btn-custom">Tovább</a>
                         </div>
                     </div>
