--- a/sutemenyek.html
+++ b/sutemenyek.html
@@ -54,7 +54,7 @@
                     <div class="card">
                         <img src="images/kavessuti_k.png" class="card-img-top" alt="Epres Szelet">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Macaron Kávéval</h5>
+                            <h5 class="card-title">Kávés Macaron</h5>
                             <p class="card-text">Elegáns, roppanós macaronok kávés krémmel töltve.</p>
                             <a href="#" class="btn btn-custom">Tovább</a>
                         </div>
